Trying again with title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-title:              Work Research Group
+title:              'Work Research Group'
 bio:                'A transportation cyber physical systems lab at Vanderbilt University'
 description:        "Jekyll version of the Massively theme by HTML5UP"
 locale:             en_US
