--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -1,4 +1,20 @@
 - name: William Barbour
+  award: Top Doctoral Fellow; Dwight David Eisenhower Transportation Fellowship
+  organization: US Department of Transportation
+  year: 2019
+- name: Derek Gloudemans
+  award: Dwight David Eisenhower Transportation Fellowship
+  organization: US Department of Transportation
+  year: 2019
+- name: Yanbing Wang
+  award: Dwight David Eisenhower Transportation Fellowship
+  organization: US Department of Transportation
+  year: 2019
+- name: William Barbour
+  award: Top Doctoral Fellow; Dwight David Eisenhower Transportation Fellowship
+  organization: US Department of Transportation
+  year: 2018
+- name: William Barbour
   award: Eno Fellowship
   organization: Eno Transportation Foundation
   year: 2018
