--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -11,7 +11,7 @@
   organization: US Department of Transportation
   year: 2019
 - name: William Barbour
-  award: Top Doctoral Fellow; Dwight David Eisenhower Transportation Fellowship
+  award: Dwight David Eisenhower Transportation Fellowship
   organization: US Department of Transportation
   year: 2018
 - name: William Barbour
