--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -1,3 +1,32 @@
+- name: Matt Nice
+  award: Dwight David Eisenhower Transportation Fellowship Research Showcase
+  organization: US Department of Transportation
+  year: 2023
+- name: Matt Nice
+  award: Dwight David Eisenhower Transportation Fellowship
+  organization: US Department of Transportation
+  year: 2023
+- name: Yanbing Wang
+  award: Dwight David Eisenhower Transportation Fellowship
+  organization: US Department of Transportation
+  year: 2022
+- name: Matt Nice
+  award: Dwight David Eisenhower Transportation Fellowship
+  organization: US Department of Transportation
+  year: 2022
+- name: Yanbing Wang
+  award: Dwight David Eisenhower Transportation Fellowship
+  organization: US Department of Transportation
+  year: 2021
+- name: Matt Nice
+  award: Dwight David Eisenhower Transportation Fellowship
+  organization: US Department of Transportation
+  year: 2021
+
+- name: Yanbing Wang
+  award: Dwight David Eisenhower Transportation Fellowship
+  organization: US Department of Transportation
+  year: 2020
 - name: William Barbour
   award: Top Doctoral Fellow; Dwight David Eisenhower Transportation Fellowship
   organization: US Department of Transportation
